--- a/src/content/page-partials/teaching.mdx
+++ b/src/content/page-partials/teaching.mdx
@@ -28,6 +28,14 @@ topics:
 - **Music Theory & Musicianship:** Harmony, ear training, analysis, basic
   conducting
 
+I teach online and in-person; in-person lessons usually are held at Church of
+the Nativity in North Raleigh, where I work. For online lessons, I am open to
+doing regular “live” lessons, or asynchronous lessons: you record yourself, and
+I send you a video and written feedback. I don't require any commitments, and am
+happy to do once-off or short-term lessons.
+
 <contact-autofill subject="Inquiring about lessons">
-If any of this sounds appealing, please [drop me a line below](/#section-contact).
+  If any of this sounds appealing, please [drop me a line
+  below](/#section-contact). I'm always happy to chat and answer questions, even
+  if we don't end up working together.
 </contact-autofill>
