--- a/src/content/page-partials/contact.mdx
+++ b/src/content/page-partials/contact.mdx
@@ -1,12 +1,14 @@
 import TelegramIcon from "../../components/TelegramIcon";
 import YouTubeIcon from "../../components/YouTubeIcon";
+import TikTokIcon from "../../components/TikTokIcon";
 
 ## Contact.
 
 The easiest way to contact me is via the form below. You can also find me on
-YouTube and Telegram:
+YouTube, Telegram, and TikTok:
 
-<div class="not-prose [&_li]:flex [&_a]:underline [&_li_a]:flex [&_li_a]:gap-2 [&_li_a]:item-center [&_svg]:w-6 [&_ul]:grid [&_ul]:gap-y-2 [&_a]:font-semibold">
-  - [<TelegramIcon /> Telegram (@bburgess_keys)](https://t.me/bburgess_keys)
-  - [<YouTubeIcon /> YouTube (@bradleyburgessmusic)](https://www.youtube.com/c/BradleyBurgessmusic)
+<div class="not-prose [&_li_a]:item-center [&_a]:font-semibold [&_a]:underline [&_li]:flex [&_li_a]:flex [&_li_a]:gap-2 [&_svg]:w-6 [&_ul]:grid [&_ul]:gap-y-2">
+  - [<TelegramIcon /> Telegram (@bburgess_keys)](https://t.me/bburgess_keys) 
+  - [<YouTubeIcon /> YouTube (@bradleyburgessmusic)](https://www.youtube.com/c/BradleyBurgessmusic) 
+  - [<TikTokIcon /> TikTok (@bburgess_keys)](https://www.tiktok.com/@bburgess_keys)
 </div>
