Corrected YouTube handle

--- a/src/content/page-partials/contact.mdx
+++ b/src/content/page-partials/contact.mdx
@@ -9,6 +9,6 @@ YouTube, Telegram, and TikTok:
 
 <div class="not-prose [&_li_a]:item-center [&_a]:font-semibold [&_a]:underline [&_li]:flex [&_li_a]:flex [&_li_a]:gap-2 [&_svg]:w-6 [&_ul]:grid [&_ul]:gap-y-2">
   - [<TelegramIcon /> Telegram (@bburgess_keys)](https://t.me/bburgess_keys) 
-  - [<YouTubeIcon /> YouTube (@bradleyburgessmusic)](https://www.youtube.com/c/BradleyBurgessmusic) 
+  - [<YouTubeIcon /> YouTube (@bburgess_keys)](https://www.youtube.com/c/BradleyBurgessmusic) 
   - [<TikTokIcon /> TikTok (@bburgess_keys)](https://www.tiktok.com/@bburgess_keys)
 </div>
