Use react-icons instead of plain svgs; add Bluesky

--- a/src/content/page-partials/contact.mdx
+++ b/src/content/page-partials/contact.mdx
@@ -1,13 +1,17 @@
-import TelegramIcon from "../../components/TelegramIcon";
-import YouTubeIcon from "../../components/YouTubeIcon";
-import TikTokIcon from "../../components/TikTokIcon";
+import {
+  FaTelegram as TelegramIcon,
+  FaYoutube as YouTubeIcon,
+  FaTiktok as TikTokIcon,
+  FaBluesky as BlueskyIcon,
+} from "react-icons/fa6"
 
 ## Contact.
 
 The easiest way to contact me is via the form below. You can also find me on
 YouTube, Telegram, and TikTok:
 
-<div class="not-prose [&_li_a]:item-center [&_a]:font-semibold [&_a]:underline [&_li]:flex [&_li_a]:flex [&_li_a]:gap-2 [&_svg]:w-6 [&_ul]:grid [&_ul]:gap-y-2">
+<div class="not-prose [&_a]:font-semibold [&_a]:underline [&_li]:flex [&_li_a]:flex [&_li_a]:items-center [&_li_a]:justify-center [&_li_a]:gap-2 [&_svg]:w-6 [&_ul]:grid [&_ul]:gap-y-2">
+  - [<BlueskyIcon /> BlueSky (@bburgesskeys.bsky.social)](https://bsky.app/profile/bburgesskeys.bsky.social)
   - [<TelegramIcon /> Telegram (@bburgess_keys)](https://t.me/bburgess_keys) 
   - [<YouTubeIcon /> YouTube (@bburgess_keys)](https://www.youtube.com/c/BradleyBurgessmusic) 
   - [<TikTokIcon /> TikTok (@bburgess_keys)](https://www.tiktok.com/@bburgess_keys)
